// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jsonc.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
\`\`\`jsonc
   // comment
{
     "foo"   :    "bar"
}
\`\`\`

=====================================output=====================================
\`\`\`jsonc
// comment
{
  "foo": "bar"
}
\`\`\`

================================================================================
`;

exports[`trailing_comma.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
\`\`\`json
{
  "foo": "bar"
}
\`\`\`

=====================================output=====================================
\`\`\`json
{
  "foo": "bar"
}
\`\`\`

================================================================================
`;
